--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,5 +11,11 @@ COPY pyproject.toml poetry.lock ./
 # Install dependencies using Poetry
 RUN poetry install --no-root
 
+# Copy the proto directory
+COPY proto ./proto/
+
+# Generate gRPC code within the container for the client
+RUN poetry run python -m grpc_tools.protoc -I./proto --python_out=. --grpc_python_out=. ./proto/ml_service.proto
+
 # Copy the rest of the application code
 COPY . .
