--- a/grpc_service/pyproject.toml
+++ b/grpc_service/pyproject.toml
@@ -6,11 +6,17 @@ authors = ["jon <jonathan.cagua@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
+python = ">=3.9,<3.12" # Asegúrate de que esta versión de Python sea compatible con tus necesidades y con requires-python
 grpcio = "^1.50.0"
 grpcio-tools = "^1.50.0"
-scikit-learn = "^1.0.0"
+scikit-learn = "^1.0.0" # Para el modelo toy
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0"] # poetry-core 2.x requiere poetry-core>=1.0.0
 build-backend = "poetry.core.masonry.api"
+
+# Si necesitas definir requires-python para el proyecto en general,
+# puedes hacerlo bajo [tool.poetry]
+# requires-python = ">=3.11" # Esto es si quieres que el proyecto requiera Python 3.11 o superior.
+                              # Asegúrate que la dependencia 'python' en [tool.poetry.dependencies]
+                              # sea consistente con esta.
