--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ graphql_service/__pycache__
 client/__pycache__
 client/ml_service_pb2_grpc.py
 client/ml_service_pb2.py
+grpc_service/__pycache__
+grpc_service/__pycache__
