--- a/rest_service/pyproject.toml
+++ b/rest_service/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.9,<3.12"
 fastapi = "^0.100.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
-scikit-learn = "^1.0.0"
+scikit-learn = "^1.0.0" # Para el modelo toy
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
